changes in dir and html

--- a/index.html
+++ b/index.html
@@ -300,65 +300,65 @@ Laxer OS ships with a Gnome desktop which is stable, easy to use, very customiza
 								<img src="assets/img/apps-logo/app1.svg" alt="Laxeros" />
 							</div>
 							<div data-size="10" class="mt-0 animate" data-show="fade-in">
-								<img src="assets/img/apps-logo/app2.svg" alt="Applif App Landing Page" />
+								<img src="assets/img/apps-logo/app2.svg" alt="LaxerOS" />
 							</div>
 							<div data-size="7" class="mt-0 animate" data-show="fade-in">
-								<img src="assets/img/apps-logo/app3.svg" alt="Applif App Landing Page" />
+								<img src="assets/img/apps-logo/app3.svg" alt="LaxerOS" />
 							</div>
 
                             <!-- Flex Break -->
                             <span class="flex-break"></span>
 
                             <div data-size="4" class="animate" data-show="fade-in">
-								<img src="assets/img/apps-logo/app4.svg" alt="Applif App Landing Page" />
+								<img src="assets/img/apps-logo/app4.svg" alt="LaxerOS" />
 							</div>
 							<div data-size="10" class="animate" data-show="fade-in">
-								<img src="assets/img/apps-logo/app5.svg" alt="Applif App Landing Page" />
+								<img src="assets/img/apps-logo/app5.svg" alt="LaxerOS" />
 							</div>
 							<div data-size="4" class="animate" data-show="fade-in">
-								<img src="assets/img/apps-logo/app6.svg" alt="Applif App Landing Page" />
+								<img src="assets/img/apps-logo/app6.svg" alt="LaxerOS" />
 							</div>
 							<div data-size="6" class="animate" data-show="fade-in">
-								<img src="assets/img/apps-logo/app7.svg" alt="Applif App Landing Page" />
+								<img src="assets/img/apps-logo/app7.svg" alt="LaxerOS" />
 							</div>
 							<div data-size="3" class="animate" data-show="fade-in">
-								<img src="assets/img/apps-logo/app8.svg" alt="Applif App Landing Page" />
+								<img src="assets/img/apps-logo/app8.svg" alt="LaxerOS" />
 							</div>
 
                             <!-- Flex Break -->
                             <span class="flex-break"></span>
 
 							<div data-size="8" class="animate" data-show="fade-in">
-								<img src="assets/img/apps-logo/app9.svg" alt="Applif App Landing Page" />
+								<img src="assets/img/apps-logo/app9.svg" alt="LaxerOS" />
 							</div>
 							<div data-size="3" class="animate" data-show="fade-in">
-								<img src="assets/img/apps-logo/app10.svg" alt="Applif App Landing Page" />
+								<img src="assets/img/apps-logo/app10.svg" alt="LaxerOS" />
 							</div>
 							<div data-size="10" class="animate" data-show="fade-in">
-								<img src="assets/img/apps-logo/app11.svg" alt="Applif App Landing Page" />
+								<img src="assets/img/apps-logo/app11.svg" alt="LaxerOS" />
 							</div>
 							<div data-size="5" class="animate" data-show="fade-in">
-								<img src="assets/img/apps-logo/app12.svg" alt="Applif App Landing Page" />
+								<img src="assets/img/apps-logo/app12.svg" alt="LaxerOS" />
 							</div>
 
                             <!-- Flex Break -->
                             <span class="flex-break"></span>
 
                             <div data-size="3" class="animate" data-show="fade-in">
-								<img src="assets/img/apps-logo/app13.svg" alt="Applif App Landing Page" />
+								<img src="assets/img/apps-logo/app13.svg" alt="LaxerOS" />
 							</div>
                             <div data-size="10" class="animate" data-show="fade-in">
-								<img src="assets/img/apps-logo/app14.svg" alt="Applif App Landing Page" />
+								<img src="assets/img/apps-logo/app14.svg" alt="LaxerOS" />
 							</div>
                             <div data-size="7" class="animate" data-show="fade-in">
-								<img src="assets/img/apps-logo/app15.svg" alt="Applif App Landing Page" />
+								<img src="assets/img/apps-logo/app15.svg" alt="LaxerOS" />
 							</div>
 
                             <!-- Flex Break -->
                             <span class="flex-break"></span>
 
                             <div data-size="4" class="mb-0 animate" data-show="fade-in">
-								<img src="assets/img/apps-logo/app16.svg" alt="Applif App Landing Page" />
+								<img src="assets/img/apps-logo/app16.svg" alt="LaxerOS" />
 							</div>
 						</div><!-- .ui-logo-cloud  -->
 
@@ -549,9 +549,9 @@ Laxer OS ships with a Gnome desktop which is stable, easy to use, very customiza
     # Add Your Google Maps API Key Below !!
     -->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5B2iXEELo6aIReGYLJdVKBlzHnrM0YLU"></script>
-	<script type="text/javascript" src="assets/js/applify/ui-map.js"></script>
+	<script type="text/javascript" src="assets/js/laxer/ui-map.js"></script>
 	<script type="text/javascript" src="assets/js/libs/form-validator/form-validator.min.js"></script>
 	<script type="text/javascript" src="assets/js/libs/bootstrap.js"></script>
-	<script type="text/javascript" src="assets/js/applify/build/applify.js"></script>
+	<script type="text/javascript" src="assets/js/laxerfiles/build/laxer.js"></script>
 </body>
 </html>
