--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<ul class="nav navbar-nav">
 					<!-- Nav Item -->
 					<li>
-						<a href="index.html#" data-scrollto="about">About</a>
+						<a href="about.html">About</a>
 					</li>
 					<!-- Nav Item -->
 					<li>
@@ -67,19 +67,19 @@
 					</li>
                     <!-- Nav Item -->
 					<li>
-						<a href="index.html#" data-scrollto="integrate">Integrate</a>
+						<a href="index.html" data-scrollto="Apps">Apps</a>
 					</li>
                     <!-- Nav Item -->
 					<li>
-						<a href="index.html#" data-scrollto="code">Code</a>
+						<a href="donate.html">Donate</a>
 					</li>
 					<!-- Nav Item -->
 					<li>
-						<a href="page-pricing.html">Pricing</a>
+						<a href="#">source code</a>
 					</li>
                     <!-- Nav Item -->
 					<li>
-						<a href="page-api-docs.html">API Docs</a>
+						<a href="index.html">Docs</a>
 					</li>
 				</ul><!--.navbar-nav -->
 			</div><!--.ui-navigation -->
@@ -234,7 +234,7 @@ Laxer OS ships with a Gnome desktop which is stable, easy to use, very customiza
    		</div><!-- .section -->
 
         <!-- Integration Section -->
-   		<div id="integrate" class="section bg-indigo">
+   		<div id="Apps" class="section bg-indigo">
    			<div class="container">
    				<div class="row">
 
@@ -507,28 +507,8 @@ Laxer OS ships with a Gnome desktop which is stable, easy to use, very customiza
 						<!-- Copyright -->
 						<div class="col-sm-6 center-on-sm">
 							<p>
-								&copy; 2020 <a href="http://www.laxeros.com" target="_blank" title="Codeytech">Laxer OS</a>
+								copyright &copy; 2020 <a href="http://www.laxeros.com" target="_blank" title="Laxer OS">Laxer OS</a>
 							</p>
-						</div>
-						<!-- Social Icons -->
-						<div class="col-sm-6 text-right">
-							<ul class="footer-nav">
-                                <li>
-                                    <a href="index.html#">
-                                        Privacy Policy
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="index.html#">
-                                        Terms &amp; Conditions
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="index.html#">
-                                        FAQ
-                                    </a>
-                                </li>
-                            </ul>
 						</div>
 					</div>
    				</div><!-- .container -->
