--- a/donate.html
+++ b/donate.html
@@ -97,7 +97,7 @@
 	<div class="main" role="main">
 
 		<!-- Hero -->
-	<div class="ui-hero hero-sm ui-post-hero ui-gradient-black">
+	<div class="ui-hero hero-sm ui-post-hero ui-gradient-green">
 		<div class="container">
 			<h1 class="heading">
 				Donate
@@ -184,7 +184,7 @@ or
 					<div class="blog-section">
 					<h6 class="section-label">About The Author</h6>
 					<!-- Author Card -->
-					<div class="ui-card ui-gradient-black shadow-md ui-author-card ui-action-card" data-target="blog.html">
+					<div class="ui-card ui-gradient-green shadow-md ui-author-card ui-action-card" data-target="blog.html">
 						<div class="inner">
 							<!-- Left Block -->
 							<div class="block">
