--- a/index.html
+++ b/index.html
@@ -8,6 +8,43 @@
 <meta content='yes' name='apple-mobile-web-app-capable'/>
 <meta content='#1D1F28' name='apple-mobile-web-app-status-bar-style'/>
 
+<!-- prefetch -->
+<b:loop values='{
+	&quot;//github.com&quot;,
+	&quot;//laxer-os.github.io&quot;,
+	&quot;//laxeros.com&quot;,
+	&quot;//maxcdn.bootstrapcdn.com&quot;,
+	&quot;//fonts.googleapis.com&quot;,
+	&quot;//use.fontawesome.com&quot;,
+	&quot;//ajax.googleapis.com&quot;,
+	&quot;//www.facebook.com&quot;,
+	&quot;//plus.google.com&quot;,
+	&quot;//twitter.com&quot;,
+	&quot;//www.youtube.com&quot;,
+	&quot;//feedburner.google.com&quot;,
+	&quot;//www.pinterest.com&quot;,
+	&quot;//www.linkedin.com&quot;,
+	&quot;//www.behance.net&quot;,
+	&quot;//feeds.feedburner.com&quot;,
+	&quot;//github.com&quot;,
+	&quot;//player.vimeo.com&quot;,
+	&quot;//platform.twitter.com&quot;,
+	&quot;//apis.google.com&quot;,
+	&quot;//connect.facebook.net&quot;,
+	&quot;//cdnjs.cloudflare.com&quot;,
+	&quot;//www.google-analytics.com&quot;,
+	&quot;//pagead2.googlesyndication.com&quot;,
+	&quot;//googleads.g.doubleclick.net&quot;,
+	&quot;//www.gstatic.com&quot;,
+	&quot;//www.googletagservices.com&quot;,
+	&quot;//static.xx.fbcdn.net&quot;,
+	&quot;//tpc.googlesyndication.com&quot;,
+	&quot;//syndication.twitter.com&quot;,
+	&quot;//w.sharethis.com&quot;,
+	&quot;//edge.sharethis.com&quot;,
+	&quot;//t.sharethis.com&quot;,
+	&quot;//laxer-os.github.io&quot;}' var='link'><link expr:href='data:link' rel='dns-prefetch'/></b:loop>
+
 <!-- favicon ico -->
 <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png">
@@ -71,7 +108,7 @@
 				<ul class="nav navbar-nav">
 					<!-- Nav Item -->
 					<li>
-						<a href="/pages/about.html">About</a>
+						<a href="pages/about.html">About</a>
 					</li>
 					<!-- Nav Item -->
 					<li>
