--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
 <meta property="og:url" content="https://laxeros.com">
 <meta property="og:title" content="Laxer OS : Arch based Linux distribution">
 <meta property="og:description" content="Laxer OS is an Arch Linux-based distribution of Linux for work and everyday use with highly focused on security, reliability, and performance. ">
-<meta property="og:image" content="">
+<meta property="og:image" content="assets/img/laxer-demo/laxer0.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://laxeros.com">
 <meta property="twitter:title" content="Laxer OS : Arch based Linux distribution">
 <meta property="twitter:description" content="Laxer OS is an Arch Linux-based distribution of Linux for work and everyday use with highly focused on security, reliability, and performance. ">
-<meta property="twitter:image" content="">
+<meta property="twitter:image" content="assets/img/laxer-demo/laxer0.png">
 
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:600|Source+Sans+Pro:600,700" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/laxer.min.css"/>
