added download locations

--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
 			</div><!--.ui-navigation -->
 
 			<!-- Navbar Toggle -->
-			<a href="index.html#" class="ui-mobile-nav-toggle pull-right"></a>
+			<a href="index.html" class="ui-mobile-nav-toggle pull-right"></a>
 
 			<!-- Navbar Button -->
-			<a href="#" class="btn btn-sm ui-gradient-green pull-right">Download <span class="fal fa-cloud-download"></span></a>
+			<a href="https://sourceforge.net/projects/laxeros/files/latest/download" class="btn btn-sm ui-gradient-green pull-right">Download <span class="fal fa-cloud-download"></span></a>
 
 		</div><!-- .container -->
 	</nav> <!-- nav -->
@@ -155,8 +155,8 @@
 						</h1>
                         <p class="paragraph">Beutifully crafted GNU/LINUX distro for everyone.</p>
 						<div class="actions animate" data-show="fade-in-up-big" data-delay="600">
-							<a href="index.html#" class="btn ui-gradient-peach shadow-xl" data-scrollto="features">Download <i class="fas fa-save"></i></span></a>
-							<a href="page-pricing.html" class="btn ui-gradient-green shadow-xl">Grab Torrent <i class="far fa-cloud-download"></i></a>
+							<a href="https://sourceforge.net/projects/laxeros/files/latest/download" class="btn ui-gradient-peach shadow-xl" data-scrollto="features">Download <i class="fas fa-save"></i></span></a>
+							<a href="https://raw.githubusercontent.com/Laxer-os/laxer-website/master/assets/torrents/laxeros-1.1-x86_64.iso.torrent" class="btn ui-gradient-green shadow-xl">Grab Torrent <i class="far fa-cloud-download"></i></a>
 						</div>
 					</div>
 					<div class="col-sm-12 animate" data-show="fade-in-up" data-delay="400">
