--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				<ul class="nav navbar-nav">
 					<!-- Nav Item -->
 					<li>
-						<a href="pages/about.html">About</a>
+						<a href="about.html">About</a>
 					</li>
 					<!-- Nav Item -->
 					<li>
@@ -116,11 +116,11 @@
 					</li>
                     <!-- Nav Item -->
 					<li>
-						<a href="index.html" data-scrollto="Apps">Apps</a>
+						<a href="index.html#" data-scrollto="Apps">Apps</a>
 					</li>
                     <!-- Nav Item -->
 					<li>
-						<a href="pages/donate.html">Donate</a>
+						<a href="donate.html">Donate</a>
 					</li>
 					<!-- Nav Item -->
 					<li>
@@ -155,7 +155,7 @@
 						</h1>
                         <p class="paragraph">Beutifully crafted GNU/LINUX distro for everyone.</p>
 						<div class="actions animate" data-show="fade-in-up-big" data-delay="600">
-							<a href="https://sourceforge.net/projects/laxeros/files/latest/download" class="btn ui-gradient-peach shadow-xl" data-scrollto="features">Download <i class="fas fa-save"></i></span></a>
+							<a href="https://sourceforge.net/projects/laxeros/files/latest/download" class="btn ui-gradient-peach shadow-xl">Download <i class="fas fa-save"></i></span></a>
 							<a href="https://raw.githubusercontent.com/Laxer-os/laxer-website/master/assets/torrents/laxeros-1.1-x86_64.iso.torrent" class="btn ui-gradient-green shadow-xl">Grab Torrent <i class="far fa-cloud-download"></i></a>
 						</div>
 					</div>
@@ -179,7 +179,7 @@
 					                            <p class="paragraph">
 Laxer OS is an Arch Linux-based distribution of Linux for work and everyday use, it is available for any 64-bit computer, laptop, or tablet with highly focused on security, reliability, and performance, Laxer OS is a versatile, and simple Linux distribution designed to fit the needs of the competent and common Linux users. It is powerful, easy to manage and install which makes it an ideal distribution for computer laptops workstations and tablets.					                            </p>
 					                            <div class="actions">
-					                                <a href="page-api-docs.html" class="btn ui-gradient-peach shadow-xl">more</a>
+					                                <a href="about.html" class="btn ui-gradient-peach shadow-xl">learn more</a>
 					                            </div>
 					                        </div><!-- .section-heading -->
 					                    </div>
@@ -474,22 +474,16 @@ Laxer OS ships with a Gnome desktop which is stable, easy to use, very customiza
                         </p>
                     </div>
                     <div class="col-md-2 col-6 footer-col">
-                        <h6 class="heading footer-heading">Quick Nav</h6>
+                        <h6 class="heading footer-heading">Other links</h6>
                         <ul class="footer-nav">
                             <li>
-                                <a href="demo-mobile-app-1.html">Mobile App 1</a>
+                                <a href="https://raw.githubusercontent.com/Laxer-os/laxer-website/master/assets/torrents/laxeros-1.1-x86_64.iso.torrent">Download torrent</a>
                             </li>
                             <li>
-                                <a href="demo-mobile-app-2.html">Mobile App 2</a>
+                                <a href="https://sourceforge.net/projects/laxeros/files/latest/download">Direct Download</a>
                             </li>
                             <li>
-                                <a href="index.html">Mobile Saas</a>
-                            </li>
-                            <li>
-                                <a href="demo-web-app.html">Web App</a>
-                            </li>
-                            <li>
-                                <a href="index.html#demos">More Demos</a>
+                                <a href="#">Apps</a>
                             </li>
                         </ul>
                     </div>
@@ -497,52 +491,33 @@ Laxer OS ships with a Gnome desktop which is stable, easy to use, very customiza
                         <h6 class="heading footer-heading">Other Pages</h6>
                         <ul class="footer-nav">
                             <li>
-                                <a href="page-api-docs.html">API Docs</a>
+                                <a href="#">Docs</a>
                             </li>
                             <li>
-                                <a href="page-pricing.html">Pricing Page</a>
+                                <a href="about.html">about</a>
                             </li>
                             <li>
-                                <a href="page-contact.html">Contact page</a>
+                                <a href="#">Contact</a>
                             </li>
                             <li>
-                                <a href="page-blog-grid.html">Blog Grid</a>
-                            </li>
-                            <li>
-                                <a href="page-coming-soon.html">Comig Soon</a>
-                            </li>
-                            <li>
-                                <a href="page-404.html">404 Error</a>
+                                <a href="donate.html">Donate</a>
                             </li>
                         </ul>
                     </div>
                     <div class="col-md-4 col-sm-6 footer-col center-on-sm">
-                        <h6 class="heading footer-heading">Newsletter</h6>
-                        <!-- Form -->
-                        <form autocomplete="on" id="sign-up-form" name="sign-up-form">
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <!-- Email Input -->
-                                    <input autocomplete="email" class="input form-control" data-validation="required" data-validation-error-msg="Please enter your email" name="email" placeholder="Email">
-                                    <div class="input-group-append">
-                                        <!-- Submit Button -->
-                                        <button class="btn ui-gradient-peach">Subscribe <span class="fa fa-send"></span></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
+                        <h6 class="heading footer-heading">Fowllow</h6>
                         <div>
                             <a class="btn ui-gradient-blue btn-circle shadow-md">
-								<span class="fa fa-facebook"></span>
+								<span class="fab fa-facebook"></span>
 							</a>
 							<a class="btn ui-gradient-peach btn-circle shadow-md">
-								<span class="fa fa-instagram"></span>
+								<span class="fab fa-reddit"></span>
 							</a>
 							<a class="btn ui-gradient-green btn-circle shadow-md">
-								<span class="fa fa-twitter"></span>
+								<span class="fab fa-twitter"></span>
 							</a>
 							<a class="btn ui-gradient-purple btn-circle shadow-md">
-								<span class="fa fa-pinterest"></span>
+								<span class="fab fa-github"></span>
 							</a>
                         </div>
                     </div>
