--- a/about.html
+++ b/about.html
@@ -262,7 +262,7 @@
 						<div class="col-md-4 col-sm-6 footer-about footer-col center-on-sm">
 										<img src="assets/img/logo/laxer-logo-white.png" data-uhd alt="Laxer os"/>
 										<p class="mt-1">
-												Laxer OS is an Arch Linux-based distribution of Linux from PAKISTAN for work and everyday use. Our OS is available for any 64-bit computer or laptop.
+												Laxer OS is an Arch Linux-based distribution of Linux for work and everyday use with highly focused on security, reliability, and performance.
 										</p>
 								</div>
 								<div class="col-md-2 col-6 footer-col">
