--- a/donate.html
+++ b/donate.html
@@ -293,7 +293,7 @@ or
 						<div class="col-md-4 col-sm-6 footer-about footer-col center-on-sm">
 										<img src="assets/img/logo/laxer-logo-white.png" data-uhd alt="Laxer OS"/>
 										<p class="mt-1">
-												Donate to support development of Laxer OS
+												Laxer OS is an Arch Linux-based distribution of Linux for work and everyday use with highly focused on security, reliability, and performance.
 										</p>
 								</div>
 								<div class="col-md-2 col-6 footer-col">
