--- a/about.html
+++ b/about.html
@@ -80,6 +80,16 @@
 <meta property="twitter:description" content="Laxer OS is an Arch Linux-based distribution of Linux from PAKISTAN for work and everyday use. Our OS is available for any 64-bit computer or laptop.. ">
 <meta property="twitter:image" content="assets/img/laxer-demo/laxer0.png">
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-177349627-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-177349627-1');
+</script>
+
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:600|Source+Sans+Pro:600,700" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/laxer.min.css"/>
 </head>
