added contact page

--- a/404.html
+++ b/404.html
@@ -46,20 +46,20 @@
 	&quot;//laxer-os.github.io&quot;}' var='link'><link expr:href='data:link' rel='dns-prefetch'/></b:loop>
 
 <!-- favicon ico -->
-<link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="assets/favicon/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="assets/favicon/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="assets/favicon/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="assets/favicon/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="assets/favicon/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="assets/favicon/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-<meta name="msapplication-TileImage" content="assets/favicon/ms-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="57x57" href="https://www.laxeros.com/assets/favicon/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="https://www.laxeros.com/assets/favicon/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="https://www.laxeros.com/assets/favicon/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="https://www.laxeros.com/assets/favicon/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="https://www.laxeros.com/assets/favicon/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="https://www.laxeros.com/assets/favicon/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="https://www.laxeros.com/assets/favicon/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="https://www.laxeros.com/assets/favicon/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="https://www.laxeros.com/assets/favicon/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="https://www.laxeros.com/assets/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://www.laxeros.com/assets/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="https://www.laxeros.com/assets/favicon/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://www.laxeros.com/assets/favicon/favicon-16x16.png">
+<meta name="msapplication-TileImage" content="https://www.laxeros.com/assets/favicon/ms-icon-144x144.png">
 
 <!-- Primary Meta Tags -->
 <title>Laxer OS : 404</title>
@@ -71,23 +71,23 @@
 <meta property="og:url" content="https://laxeros.com">
 <meta property="og:title" content="Laxer OS : Arch based Linux distribution">
 <meta property="og:description" content="Laxer OS is an Arch Linux-based distribution of Linux for work and everyday use with highly focused on security, reliability, and performance. ">
-<meta property="og:image" content="assets/img/laxer-demo/laxer0.png">
+<meta property="og:image" content="https://www.laxeros.com/assets/img/laxer-demo/laxer0.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://laxeros.com">
 <meta property="twitter:title" content="Laxer OS : Arch based Linux distribution">
 <meta property="twitter:description" content="Laxer OS is an Arch Linux-based distribution of Linux for work and everyday use with highly focused on security, reliability, and performance. ">
-<meta property="twitter:image" content="assets/img/laxer-demo/laxer0.png">
+<meta property="twitter:image" content="https://www.laxeros.com/assets/img/laxer-demo/laxer0.png">
 
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:600|Source+Sans+Pro:600,700" rel="stylesheet">
-	<link rel="stylesheet" href="assets/css/laxer.min.css"/>
+	<link rel="stylesheet" href="https://www.laxeros.com/assets/css/laxer.min.css"/>
 </head>
 
 <div class="main" role="main">
 <center>
 		<div class="error404-wrapper">
-				<img src="assets/img/support/404.svg" alt="Laxeros" />
+				<img src="https://www.laxeros.com/assets/img/support/404.svg" alt="Laxeros" />
 				<h1 class="heading">Dead End!</h1>
 				<p class="lead mb-3">The page you are looking for doesn't exist.</p>
 				<a href="http://www.laxeros.com/" class="btn ui-gradient-blue">Home Page</a>
@@ -96,19 +96,19 @@
 </div><!-- .main -->
 
 <!-- Scripts -->
-<script type="text/javascript" src="assets/js/libs/jquery/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="assets/js/libs/waypoints/jquery.waypoints.min.js"></script>
-<script type="text/javascript" src="assets/js/libs/slider-pro/jquery.sliderPro.min.js"></script>
-<script type="text/javascript" src="assets/js/libs/owl.carousel/owl.carousel.min.js"></script>
-<script type="text/javascript" src="assets/js/libs/prism/prism.js"></script>
+<script type="text/javascript" src="https://www.laxeros.com/assets/js/libs/jquery/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="https://www.laxeros.com/assets/js/libs/waypoints/jquery.waypoints.min.js"></script>
+<script type="text/javascript" src="https://www.laxeros.com/assets/js/libs/slider-pro/jquery.sliderPro.min.js"></script>
+<script type="text/javascript" src="https://www.laxeros.com/assets/js/libs/owl.carousel/owl.carousel.min.js"></script>
+<script type="text/javascript" src="https://www.laxeros.com/assets/js/libs/prism/prism.js"></script>
 <!--
 # Google Maps
 # Add Your Google Maps API Key Below !!
 -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5B2iXEELo6aIReGYLJdVKBlzHnrM0YLU"></script>
-<script type="text/javascript" src="assets/js/laxer/ui-map.js"></script>
-<script type="text/javascript" src="assets/js/libs/form-validator/form-validator.min.js"></script>
-<script type="text/javascript" src="assets/js/libs/bootstrap.js"></script>
-<script type="text/javascript" src="assets/js/laxerfiles/build/laxer.js"></script>
+<script type="text/javascript" src="https://www.laxeros.com/assets/js/laxer/ui-map.js"></script>
+<script type="text/javascript" src="https://www.laxeros.com/assets/js/libs/form-validator/form-validator.min.js"></script>
+<script type="text/javascript" src="https://www.laxeros.com/assets/js/libs/bootstrap.js"></script>
+<script type="text/javascript" src="https://www.laxeros.com/assets/js/laxerfiles/build/laxer.js"></script>
 </body>
 </html>
