--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@ Laxer OS ships with a Gnome desktop which is stable, easy to use, very customiza
                                 <a href="about.html">about</a>
                             </li>
                             <li>
-                                <a href="#">Contact</a>
+                                <a href="contact.html">Contact</a>
                             </li>
                             <li>
                                 <a href="donate.html">Donate</a>
