--- a/about.html
+++ b/about.html
@@ -118,27 +118,7 @@
 				<ul class="nav navbar-nav">
 					<!-- Nav Item -->
 					<li>
-						<a href="about.html">About</a>
-					</li>
-					<!-- Nav Item -->
-					<li>
-						<a href="https://www.laxeros.com/index.html#" data-scrollto="features">Features</a>
-					</li>
-                    <!-- Nav Item -->
-					<li>
-						<a href="index.html" data-scrollto="Apps">Apps</a>
-					</li>
-                    <!-- Nav Item -->
-					<li>
-						<a href="https://www.laxeros.com/donate.html">Donate</a>
-					</li>
-					<!-- Nav Item -->
-					<li>
-						<a href="#">source code</a>
-					</li>
-                    <!-- Nav Item -->
-					<li>
-						<a href="index.html">Docs</a>
+						<a href="home.html">Home</a>
 					</li>
 				</ul><!--.navbar-nav -->
 			</div><!--.ui-navigation -->
