--- a/404.html
+++ b/404.html
@@ -87,7 +87,7 @@
 <div class="main" role="main">
 <center>
 		<div class="error404-wrapper">
-				<img src="assets/img/support/404.gif" alt="Laxeros" />
+				<img src="https://www.laxeros.com/assets/img/support/404.gif" alt="Laxeros" />
 				<h1 class="heading">Dead End!</h1>
 				<p class="lead mb-3">The page you are looking for doesn't exist.</p>
 				<a href="http://www.laxeros.com/" class="btn ui-gradient-blue">Home Page</a>
