--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
 				<ul class="nav navbar-nav">
 					<!-- Nav Item -->
 					<li>
-						<a href="home.html">Home</a>
+						<a href="https://www.laxeros.com">Home</a>
 					</li>
 				</ul><!--.navbar-nav -->
 			</div><!--.ui-navigation -->
@@ -135,7 +135,7 @@
 	<div class="main" role="main">
 
 		<!-- Hero -->
-	<div class="ui-hero hero-sm ui-post-hero ui-gradient-peach">
+	<div class="ui-hero hero-sm ui-post-hero ui-gradient-dark">
 		<div class="container">
 			<h1 class="heading">
 				About US
