--- a/about.html
+++ b/about.html
@@ -192,7 +192,7 @@
 					<div class="blog-section">
 					<h6 class="section-label">About The Author</h6>
 					<!-- Author Card -->
-					<div class="ui-card ui-gradient-peach shadow-md ui-author-card ui-action-card" data-target="blog.html">
+					<div class="ui-card ui-gradient-dark shadow-md ui-author-card ui-action-card" data-target="blog.html">
 						<div class="inner">
 							<!-- Left Block -->
 							<div class="block">
