--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		<div class="container">
 
 			<!-- Navbar Logo -->
-			<a class="ui-variable-logo navbar-brand" href="index.html" title="Laxer OS : Arch based Linux distribution">
+			<a class="ui-variable-logo navbar-brand" href="www.laxeros.com" title="Laxer OS : Arch based Linux distribution">
 				<!-- Default Logo -->
 				<img class="logo-default" src="assets/img/logo/laxer-logo.png" alt="Laxer OS : Arch based Linux distribution" data-uhd>
 				<!-- Transparent Logo -->
@@ -118,19 +118,19 @@
 				<ul class="nav navbar-nav">
 					<!-- Nav Item -->
 					<li>
-						<a href="about.html">About</a>
+						<a href="about">About</a>
 					</li>
 					<!-- Nav Item -->
 					<li>
-						<a href="index.html#" data-scrollto="features">Features</a>
+						<a href="/#" data-scrollto="features">Features</a>
 					</li>
                     <!-- Nav Item -->
 					<li>
-						<a href="index.html#" data-scrollto="Apps">Apps</a>
+						<a href="/#" data-scrollto="Apps">Apps</a>
 					</li>
                     <!-- Nav Item -->
 					<li>
-						<a href="donate.html">Donate</a>
+						<a href="donate">Donate</a>
 					</li>
 					<!-- Nav Item -->
 					<li>
@@ -138,13 +138,13 @@
 					</li>
                     <!-- Nav Item -->
 					<li>
-						<a href="index.html">Docs</a>
+						<a href="index">Docs</a>
 					</li>
 				</ul><!--.navbar-nav -->
 			</div><!--.ui-navigation -->
 
 			<!-- Navbar Toggle -->
-			<a href="index.html" class="ui-mobile-nav-toggle pull-right"></a>
+			<a href="index" class="ui-mobile-nav-toggle pull-right"></a>
 
 			<!-- Navbar Button -->
 			<a href="https://sourceforge.net/projects/laxeros/files/latest/download" class="btn btn-sm ui-gradient-green pull-right">Download <span class="fal fa-cloud-download"></span></a>
@@ -189,7 +189,7 @@
 					                            <p class="paragraph">
 Laxer OS is an Arch Linux-based distribution of Linux for work and everyday use, it is available for any 64-bit computer, laptop, or tablet with highly focused on security, reliability, and performance, Laxer OS is a versatile, and simple Linux distribution designed to fit the needs of the competent and common Linux users. It is powerful, easy to manage and install which makes it an ideal distribution for computer laptops workstations and tablets.					                            </p>
 					                            <div class="actions">
-					                                <a href="about.html" class="btn ui-gradient-peach shadow-xl">learn more</a>
+					                                <a href="about" class="btn ui-gradient-peach shadow-xl">learn more</a>
 					                            </div>
 					                        </div><!-- .section-heading -->
 					                    </div>
@@ -267,7 +267,7 @@ Laxer OS ships with a Gnome desktop which is stable, easy to use, very customiza
                             <p class="paragraph">
 															An enjoyable flat and light theme with a unique and modern looks for Gnome.
 																</p>
-                            <a href="index.html#" class="btn-link btn-arrow">Explore</a>
+                            <a href="index#" class="btn-link btn-arrow">Explore</a>
                         </div>
                         <div class="col-md-6">
                             <img class="responsive-on-xs" src="assets/img/laxer-demo/laxer2.png" dat-uhd alt="Laxer OS : Arch based Linux distribution" data-max_width="464" />
@@ -281,7 +281,7 @@ Laxer OS ships with a Gnome desktop which is stable, easy to use, very customiza
                             <p class="paragraph">
 															A dark variant of theme inspired from dracula colours with a unique and modern look.
                             </p>
-                            <a href="index.html#" class="btn-link btn-arrow">Explore</a>
+                            <a href="index#" class="btn-link btn-arrow">Explore</a>
                         </div>
                         <div class="col-md-6">
                             <img class="responsive-on-xs" src="assets/img/laxer-demo/laxer3.png" dat-uhd alt="Laxer OS : Arch based Linux distribution"  data-max_width="451"/>
@@ -504,13 +504,13 @@ Laxer OS ships with a Gnome desktop which is stable, easy to use, very customiza
                                 <a href="#">Docs</a>
                             </li>
                             <li>
-                                <a href="about.html">about</a>
+                                <a href="about">about</a>
                             </li>
                             <li>
-                                <a href="contact.html">Contact</a>
+                                <a href="contact">Contact</a>
                             </li>
                             <li>
-                                <a href="donate.html">Donate</a>
+                                <a href="donate">Donate</a>
                             </li>
                         </ul>
                     </div>
